fix: Fix templates to work properly on gmail

--- a/backend/newsletter/templates/results.html
+++ b/backend/newsletter/templates/results.html
@@ -21,39 +21,39 @@
             <table width="100%" style="border-collapse: collapse; margin: 0px 0;">
                 <thead style="background-color: #0076BC; color: #fff;">
                     <tr>
-                        <th style="padding: 6px; font-size: 12px; text-align: center;">Date & Time (UTC)</th>
-                        <th style="padding: 6px; font-size: 12px; text-align: center;">Object Identifier</th>
-                        <th style="padding: 6px; font-size: 12px; text-align: center;">Velocity (km/s)</th>
-                        <th style="padding: 4px; font-size: 12px; text-align: center;">Closest Approach (arcsec)</th>
-                        <th style="padding: 6px; font-size: 12px; text-align: center;">Uncertainty (km)</th>
-                        <th style="padding: 6px; font-size: 12px; text-align: center;">Gaia Magnitude</th>
+                        <th style="padding: 5px; font-size: 12px; text-align: center;">Date Time (UTC)</th>
+                        <th style="padding: 5px; font-size: 12px; text-align: center;">Object Identifier</th>
+                        <th style="padding: 5px; font-size: 12px; text-align: center;">Velocity (km/s)</th>
+                        <th style="padding: 5px; font-size: 12px; text-align: center;">Closest Approach (arcsec)</th>
+                        <th style="padding: 5px; font-size: 12px; text-align: center;">Uncertainty (km)</th>
+                        <th style="padding: 5px; font-size: 12px; text-align: center;">Gaia Magnitude</th>
+                        <th style="padding: 5px; font-size: 12px; text-align: center;"></th>
                     </tr>
                 </thead>
                 <tbody style="background-color: #ffffff; color: #0c0c0c;">
                     {% for row in data %}
-                    <tr class="clickable-row"
-                        onclick="window.location.href='{{ host }}/prediction-event-detail/{{ row.id }}'">
-                        <td style="padding: 8px; font-size: 12px; text-align: center;">
+                    <tr class="clickable-row">
+                        <td style="padding: 10px; font-size: 12px; text-align: center;">
                             {{ row.date_time|default:"-" }}
                         </td>
-                        <td style="padding: 8px; font-size: 12px; text-align: center;">
+                        <td style="padding: 6px; font-size: 12px; text-align: center;">
                             {{row.name|default:"-" }}
                         </td>
-                        <td style="padding: 8px; font-size: 12px; text-align: center;">
+                        <td style="padding: 6px; font-size: 12px; text-align: center;">
                             {% if row.velocity %}
-                            {{ row.velocity|floatformat:3 }}
+                            {{ row.velocity|floatformat:1 }}
                             {% else %}
                             -
                             {% endif %}
                         </td>
-                        <td style="padding: 8px; font-size: 12px; text-align: center;">
+                        <td style="padding: 6px; font-size: 12px; text-align: center;">
                             {% if row.closest_approach %}
                             {{ row.closest_approach|floatformat:3 }}
                             {% else %}
                             -
                             {% endif %}
                         </td>
-                        <td style="padding: 8px; font-size: 12px; text-align: center;">
+                        <td style="padding: 6px; font-size: 12px; text-align: center;">
                             {% if row.closest_approach_uncertainty_km %}
                             {% if row.closest_approach_uncertainty_km > 12500 %}
                             Very High
@@ -64,12 +64,15 @@
                             -
                             {% endif %}
                         </td>
-                        <td style="padding: 8px; font-size: 12px; text-align: center;">
+                        <td style="padding: 6px; font-size: 12px; text-align: center;">
                             {% if row.gaia_magnitude %}
-                            {{ row.gaia_magnitude|floatformat:3 }}
+                            {{ row.gaia_magnitude|floatformat:1 }}
                             {% else %}
                             -
                             {% endif %}
+                        </td>
+                        <td style="padding: 8px; font-size: 11px; text-align: center;">
+                            <a href='{{ host }}/prediction-event-detail/{{ row.id }}'>[URL]</a>
                         </td>
                     </tr>
                     {% endfor %}
