refactor: Updates the templates with new logo and button

--- a/backend/newsletter/templates/header.html
+++ b/backend/newsletter/templates/header.html
@@ -6,7 +6,7 @@
       <table style="width: 100%; border-collapse: collapse;">
         <tr>
           <td style="vertical-align: middle; width: 60px;">
-            <img src="https://solarsystem.linea.org.br/img/linea-logo.png" alt="LIneA Logo"
+            <img src="https://solarsystem.linea.org.br/img/linea-logo-white-alpha.png" alt="LIneA Logo"
               style="width: 60px; margin: 0px; margin-left: 40px; display: inline-block;"
               onerror="this.style.display='none'; this.parentElement.style.width='0'; this.parentElement.nextElementSibling.style.width='100%';">
           </td>
