refactor(backend/newsletter/templates/footer.html): Inclusao da logo e-universo inct no template de emails da subscrição

--- a/backend/newsletter/templates/footer.html
+++ b/backend/newsletter/templates/footer.html
@@ -3,32 +3,69 @@
 <tr>
   <td>
     <div
-      style="background-color: #F8F8F8; padding: 0px; text-align: center; font-family: Arial, sans-serif; color: #5a5c5f;">
-      <p style="font-size: 12px; margin: 0px 0;">LIneA is sponsored by:</p>
-      <div style="margin: 5px 0;">
-        <img src="https://solarsystem.linea.org.br/img/supporters/capes.png" alt="CAPES"
-          style="width: 60px; margin: 5px;"
-          onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span style=\'font-size: 14px; color: #5a5c5f;\'>CAPES,</span>');">
+      style="
+        background-color: #f8f8f8;
+        padding: 0px;
+        text-align: center;
+        font-family: Arial, sans-serif;
+        color: #5a5c5f;
+      "
+    >
+      <p style="font-size: 12px; margin: 0px 0">LIneA is sponsored by:</p>
+      <div style="margin: 5px 0">
+        <img
+          src="https://solarsystem.linea.org.br/img/supporters/e-universo.png"
+          alt="INCT"
+          style="width: 60px; margin: 5px"
+          onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span style=\'font-size: 14px; color: #5a5c5f;\'>INCT,</span>');"
+        />
 
-        <img src="https://solarsystem.linea.org.br/img/supporters/cnpq.png" alt="CNPq" style="width: 60px; margin: 5px;"
-          onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span style=\'font-size: 14px; color: #5a5c5f;\'>CNPq,</span>');">
+        <img
+          src="https://solarsystem.linea.org.br/img/supporters/capes.png"
+          alt="CAPES"
+          style="width: 60px; margin: 5px"
+          onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span style=\'font-size: 14px; color: #5a5c5f;\'>CAPES,</span>');"
+        />
 
-        <img src="https://solarsystem.linea.org.br/img/supporters/faperj.png" alt="FAPERJ"
-          style="width: 60px; margin: 5px;"
-          onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span style=\'font-size: 14px; color: #5a5c5f;\'>FAPERJ, </span>');">
+        <img
+          src="https://solarsystem.linea.org.br/img/supporters/cnpq.png"
+          alt="CNPq"
+          style="width: 60px; margin: 5px"
+          onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span style=\'font-size: 14px; color: #5a5c5f;\'>CNPq,</span>');"
+        />
 
-        <img src="https://solarsystem.linea.org.br/img/supporters/finep.png" alt="FINEP"
-          style="width: 60px; margin: 5px;"
-          onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span style=\'font-size: 14px; color: #5a5c5f;\'>FINEP </span>');">
+        <img
+          src="https://solarsystem.linea.org.br/img/supporters/faperj.png"
+          alt="FAPERJ"
+          style="width: 60px; margin: 5px"
+          onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span style=\'font-size: 14px; color: #5a5c5f;\'>FAPERJ, </span>');"
+        />
 
+        <img
+          src="https://solarsystem.linea.org.br/img/supporters/finep.png"
+          alt="FINEP"
+          style="width: 60px; margin: 5px"
+          onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span style=\'font-size: 14px; color: #5a5c5f;\'>FINEP </span>');"
+        />
       </div>
       <div
-        style="background-color: #0076BC; color: #ffffff; padding: 5px; text-align: right; font-size: 12px; font-weight: bold">
+        style="
+          background-color: #0076bc;
+          color: #ffffff;
+          padding: 5px;
+          text-align: right;
+          font-size: 12px;
+          font-weight: bold;
+        "
+      >
         <span>
-          <a href="http://www.linea.org.br/" style="color: #ffffff; text-decoration: none;">Powered by LIneA</a>
+          <a
+            href="http://www.linea.org.br/"
+            style="color: #ffffff; text-decoration: none"
+            >Powered by LIneA</a
+          >
         </span>
       </div>
-
     </div>
   </td>
 </tr>
